[PREM-21] Transactions management (#40)
* [PREM-21] Add API get transactions in range of date

* [PREM-21] Change method to receive fromDate and toDate

* [PREM-21] Add query customer's transactions in range of date

* [PREM-21] Add customer's credit card status on FullInfoUserDto

* [PREM-21] Update API docs

* [PREM-21] Allow employee to enable customer credit card.

* [PREM-21] Add total amount, get banks info API

* [PREM-21] Add calculate transfer amount.

Co-authored-by: Nguyen Duc Nam <namworkmc@gmail.com>